[package]
name = "day11_rust_node"
version = "0.1.0"
authors = ["Ryan Riginding <ryan@riginding.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "day11_rust_node"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
rayon = "1.0.3"
